--- a/src/pages/css/home.css
+++ b/src/pages/css/home.css
@@ -85,7 +85,8 @@
 }
 
 .plane-image {
-  background: linear-gradient(180deg, #eb8787 0%, #fee0e0 100%);
+  /* background: linear-gradient(180deg, #eb8787 0%, #fee0e0 100%); */
+  background: linear-gradient(180deg, #ffffff 0%, #fee0e0 100%);
   /* background-color: #ececec; */
   padding: 40px 10px 10px;
   text-align: center;
@@ -96,12 +97,13 @@
 
 .plane-image::before {
   content: "";
-  background-image: url('../../assets/images/robot.png');
+  background-image: url('../../assets/images/agv1.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  margin-top: 30px;
   width: 100%;
-  height: 180px;
+  height: 140px;
   display: block;
 }
 
