--- a/src/pages/css/mission.css
+++ b/src/pages/css/mission.css
@@ -351,7 +351,7 @@ tbody td {
 }
 
 .pagination a.active {
-  background-color: #0400ff;
+  background-color: var(--drawer-text-color);
   color: white;
   border-radius: 5px;
 }
