--- a/src/pages/css/vehicle.css
+++ b/src/pages/css/vehicle.css
@@ -107,7 +107,8 @@
 .robot-img {
   width: 150px;
   height: 200px;
-  background: linear-gradient(135deg, #f5f7fa 0%, #e8ecf1 100%);
+  background: linear-gradient(135deg, #f5f5f5 0%, #bebebe 100%);
+  /* background: linear-gradient(180deg, #ffffff 0%, #fee0e0 100%); */
   border-radius: 16px;
   display: flex;
   align-items: center;
@@ -121,7 +122,7 @@
 
 .robot-img:hover {
   transform: scale(1.05);
-  border-color: #667eea;
+  border-color: #ea6666;
 }
 
 .robot-img::before {
